# Kaleidoscope

./: .color_coded  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  lexer.cpp
src/: AST.cpp  AST.h  lexer.cpp  lexer.h  parser.cpp  parser.h
tests/: test_lexer.cpp
